# SmartKitchen_Cpp

./: main.c  project.config
Camera/: Camera.py  CameraPreview.py  ConfirmedImages.json  HelloRpi  backup20151005projectScript.py  backup20151006_projectScript.py  backup_projectScript.py  breakOut.py  callScript.py  cameraSpeed.py  capseq.py  projectScript.py  recognition.py  removefile.py  scale.py  test.py  testGPIO.py  weightDifference.py
ObjectDetector/: CMakeLists.txt  CMakeLists.txt~  ObjectDetector.cbp  ObjectDetector.depend  ObjectDetector.layout  main.cpp  testPython.py  train_object_detector.cpp  xml_parser_ex.cpp
ObjectDetector/SVMFolder/: honey.svm  milk.svm
ObjectDetector/dlib/: cmake
